Fixes social list obscurity on small screens

--- a/_sass/elements/_lists.scss
+++ b/_sass/elements/_lists.scss
@@ -18,3 +18,13 @@
     }
   }
 }
+
+@media #{$bp-below-tablet} {
+  .inline-list > li:first-of-type {
+      display: block;
+  }
+
+  .main-header .social-list > li:first-of-type {
+    margin-right: 0;
+  }
+}
